--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pied Piper",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0"
